2007-11-08  John W. Eaton  <jwe@octave.org>

	* control/hinf/h2syn.m, control/hinf/hinf_ctr.m,
	control/hinf/hinfnorm.m, control/hinf/hinfsyn.m,
	control/hinf/hinfsyn_chk.m, control/hinf/is_dgkf.m,
	control/hinf/wgt1o.m: Style fixes.

2007-11-08  David Bateman  <dbateman@free.fr>

	* plot/quiver.m: Fix arrowheads.

2007-11-07  Ben Abbott  <bpabbott@mac.com>

	* set/ismember.m: Call cell_ismember to handle cellstr args.
	Handle "rows" argument.  New tests.
	(cell_ismember): New function.

2007-11-07  John W. Eaton  <jwe@octave.org>

	* control/base/__bodquist__.m, control/base/__freqresp__.m,
	control/base/__stepimp__.m, control/base/are.m,
	control/base/ctrb.m, control/base/damp.m, control/base/dare.m,
	control/base/dcgain.m, control/base/dgram.m, control/base/dlqr.m,
	control/base/dre.m, control/base/impulse.m, control/base/lqe.m,
	control/base/lqg.m, control/base/lqr.m, control/base/lsim.m,
	control/base/ltifr.m, control/base/nichols.m,
	control/base/nyquist.m, control/base/obsv.m, control/base/place.m,
	control/base/rlocus.m, control/base/step.m, control/base/tzero.m:
	Style fixes.

2007-11-07  Muthiah Annamalai  <muthuspost@gmail.com>

	* control/base/bode_bounds.m, control/base/dgram.m,
	control/base/dlyap.m, control/base/freqchkw.m,
	control/base/gram.m, control/base/place.m,
	control/hinf/hinf_ctr.m, control/hinf/hinfsyn_chk.m,
	control/hinf/hinfsyn_ric.m, control/system/is_sample.m,
	control/system/is_signal_list.m, control/system/ss2tf.m,
	control/system/sys2fir.m, control/system/sysgettsam.m,
	control/system/sysgettype.m, control/system/sysreorder.m,
	control/system/tf2sys.m, control/system/zp2tf.m,
	control/util/axis2dlim.m, control/util/swap.m,
	control/util/zgfmul.m, control/util/zgfslv.m,
	control/util/zginit.m, control/util/zgreduce.m,
	control/util/zgrownorm.m, control/util/zgscal.m,
	control/util/zgsgiv.m, control/util/zgshsr.m, general/isa.m,
	geometry/inpolygon.m, linear-algebra/housh.m,