@@ -49,24 +49,24 @@ function axvec = axis2dlim (axdata)
   delv = (maxv-minv)/2;      # breadth of the plot
   midv = (minv + maxv)/2;    # midpoint of the plot
   axmid = [midv(1), midv(1), midv(2), midv(2)];
-  axdel = [-0.1, 0.1,-0.1,0.1];   # default plot width (if less than 2-d data)
-  if(max(delv) == 0)
-    if(midv(1) != 0)
-      axdel(1:2) = [-0.1*midv(1),0.1*midv(1)];
+  axdel = [-0.1, 0.1, -0.1, 0.1];   # default plot width (if less than 2-d data)
+  if (max (delv) == 0)
+    if (midv(1) != 0)
+      axdel(1:2) = [-0.1*midv(1), 0.1*midv(1)];
     endif
-    if(midv(2) != 0)
-      axdel(3:4) = [-0.1*midv(2),0.1*midv(2)];
+    if (midv(2) != 0)
+      axdel(3:4) = [-0.1*midv(2), 0.1*midv(2)];
     endif
   else
     ## they're at least one-dimensional
     tolv = max(1e-8, 1e-8*abs(midv));
-    if(abs(delv(1)) >= tolv(1))
+    if (abs (delv(1)) >= tolv(1))
       axdel(1:2) = 1.1*[-delv(1),delv(1)];
     endif
-    if(abs(delv(2)) >= tolv(2))
+    if (abs (delv(2)) >= tolv(2))
       axdel(3:4) = 1.1*[-delv(2),delv(2)];
     endif
   endif
   axvec = axmid + axdel;
-endfunction
 
+endfunction
