@@ -37,48 +37,67 @@ function y = zgfmul (a, b, c, d, x)
     print_usage ();
   endif 
 
-  [n,m] = size(b);
-  [p,m1] = size(c);
+  [n, m] = size (b);
+  [p, m1] = size (c);
   nm = n+m;
-  y = zeros(nm+p,1);
+  y = zeros (nm+p, 1);
 
   ## construct F column by column
-  for jj=1:n
-    Fj = zeros(nm+p,1);
+  for jj = 1:n
+    Fj = zeros (nm+p, 1);
 
     ## rows 1:n: F1
-    aridx = complement(jj,find(a(jj,:) != 0));
-    acidx = complement(jj,find(a(:,jj) != 0));
-    bidx = find(b(jj,:) != 0);
-    cidx = find(c(:,jj) != 0);
+    aridx = complement (jj, find (a(jj,:) != 0));
+    acidx = complement (jj, find (a(:,jj) != 0));
+    bidx = find (b(jj,:) != 0);
+    cidx = find (c(:,jj) != 0);
 
     Fj(aridx) = Fj(aridx) - 1;      # off diagonal entries of F1
     Fj(acidx) = Fj(acidx) - 1;
     ## diagonal entry of F1
-    Fj(jj) = length(aridx)+length(acidx) + length(bidx) + length(cidx);
+    Fj(jj) = length (aridx) + length (acidx) + length (bidx) + length (cidx);
 
-    if(!isempty(bidx)) Fj(n+bidx) = 1;     endif # B' incidence
-    if(!isempty(cidx)) Fj(n+m+cidx) = -1;  endif # -C incidence
+    ## B' incidence
+    if (! isempty (bidx))
+      Fj(n+bidx) = 1;
+    endif
+
+    ## -C incidence
+    if (! isempty (cidx))
+      Fj(n+m+cidx) = -1;
+    endif
     y = y + x(jj)*Fj;   # multiply by corresponding entry of x
   endfor
 
-  for jj=1:m
-    Fj = zeros(nm+p,1);
-    bidx = find(b(:,jj) != 0);
-    if(!isempty(bidx)) Fj(bidx) = 1; endif     # B incidence
-    didx = find(d(:,jj) != 0);
-    if(!isempty(didx)) Fj(n+m+didx) = 1; endif # D incidence
+  for jj = 1:m
+    Fj = zeros (nm+p, 1);
+    bidx = find (b(:,jj) != 0);
+    ## B incidence
+    if (! isempty (bidx))
+      Fj(bidx) = 1;
+    endif
+    didx = find (d(:,jj) != 0);
+    ## D incidence
+    if (! isempty (didx))
+      Fj(n+m+didx) = 1;
+    endif
     Fj(n+jj) = length(bidx) + length(didx);         # F2 is diagonal
     y = y + x(n+jj)*Fj;   # multiply by corresponding entry of x
   endfor
 
-  for jj=1:p
-    Fj = zeros(nm+p,1);
-    cidx = find(c(jj,:) != 0);
-    if(!isempty(cidx)) Fj(cidx) = -1; endif  # -C' incidence
+  for jj = 1:p
+    Fj = zeros (nm+p, 1);
+    cidx = find (c(jj,:) != 0);
+    ## -C' incidence
+    if (! isempty (cidx))
+      Fj(cidx) = -1;
+    endif
     didx = find(d(jj,:) != 0);
-    if(!isempty(didx)) Fj(n+didx) = 1;  endif # D' incidence
-    Fj(n+m+jj) = length(cidx) + length(didx);     # F2 is diagonal
+    ## D' incidence
+    if (! isempty (didx))
+      Fj(n+didx) = 1;
+    endif
+    Fj(n+m+jj) = length (cidx) + length (didx);     # F2 is diagonal
     y = y + x(n+m+jj)*Fj;   # multiply by corresponding entry of x
   endfor
 
